test/fixtures/fixtures/type-error/keccak.lys.ast.desugar
|-Document(0,45)
  |-FunctionDirective(0,45)
    |-Decorators(0,0)
      <Rule0>
    |-FunDeclaration(0,45)
      |-FunctionName(4,10)
        |-NameIdentifier(4,10)
          |-Identifier=keccak
      |-TypeParameters(10,10)
        <Rule0>
      |-FunctionParamsList(10,24)
        |-(List)(11,23)
          |-Parameter(11,23)
            |-NameIdentifier(11,16)
              |-Identifier=input
            |-Reference(18,23)
              |-QName(18,23)
                |-NameIdentifier(18,23)
                  |-Identifier=bytes
      |-ReturnType(24,32)
        |-Reference(26,31)
          |-QName(26,31)
            |-NameIdentifier(26,31)
              |-Identifier=bytes
      |-FunctionBody(32,45)
        |-CodeBlock(34,45)
          |-Reference(38,43)
            |-QName(38,43)
              |-NameIdentifier(38,43)
                |-Identifier=bytes
  |-EndOfFile=